<resources>
    <string name="app_name">USTH Weather</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="sun">Sunday</string>
    <string name="mon">Monday</string>
    <string name="tue">Tuesday</string>
    <string name="wed">Wednesday</string>
    <string name="thu">Thursday</string>
    <string name="fri">Friday</string>
    <string name="sat">Saturday</string>

    <string name="partly_cloud">Partly Cloudy \n24C - 31C</string>
    <string name="shower">Shower \n24C - 30C</string>
    <string name="rain">Rain \n22C - 23C</string>
    <string name="storm">Storm \n22C - 27C</string>
    <string name="windy">Windy \n24C - 31C</string>
    <string name="foggy">Foggy \n25C - 28C</string>

    <string name="today">30C\nSunny</string>
    <string name="hanoi">Ha Noi</string>
    <string name="paris">Paris</string>
    <string name="toulouse">Toulouse</string>
    <string name="refresh">Refresh</string>
    <string name="setting">Setting</string>

</resources>