<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForecastFragment"
    android:background="@color/white"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_height="0px"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/mon"
            android:gravity="center"
            tools:ignore="NestedWeights" />
        <ImageView
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/cloud"
            android:layout_gravity="center"
            android:layout_margin="@dimen/icon_margin"/>
        <TextView
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/partly_cloud"
            android:gravity="center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:layout_height="0px"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tue"
            android:gravity="center"
            tools:ignore="NestedWeights" />
        <ImageView
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/rain"
            android:layout_gravity="center"
            android:layout_margin="@dimen/icon_margin"/>
        <TextView
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/shower"
            android:gravity="center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:layout_height="0px"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/wed"
            android:gravity="center"
            tools:ignore="NestedWeights" />
        <ImageView
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/rain"
            android:layout_gravity="center"
            android:layout_margin="@dimen/icon_margin"/>
        <TextView
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/rain"
            android:gravity="center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:layout_height="0px"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/thu"
            android:gravity="center"
            tools:ignore="NestedWeights" />
        <ImageView
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/storm"
            android:layout_gravity="center"
            android:layout_margin="@dimen/icon_margin"/>
        <TextView
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/storm"
            android:gravity="center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:layout_height="0px"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/fri"
            android:gravity="center"
            tools:ignore="NestedWeights" />
        <ImageView
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/cloud"
            android:layout_gravity="center"
            android:layout_margin="@dimen/icon_margin"/>
        <TextView
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/partly_cloud"
            android:gravity="center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:layout_height="0px"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sat"
            android:gravity="center"
            tools:ignore="NestedWeights" />
        <ImageView
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/wind"
            android:layout_gravity="center"
            android:layout_margin="@dimen/icon_margin"/>
        <TextView
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/windy"
            android:gravity="center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:layout_height="0px"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sun"
            android:gravity="center"
            tools:ignore="NestedWeights" />
        <ImageView
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/fog"
            android:layout_gravity="center"
            android:layout_margin="@dimen/icon_margin"/>
        <TextView
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/foggy"
            android:gravity="center_vertical"/>
    </LinearLayout>

</LinearLayout>